lower case package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Lorenum/Utils",
+  "name": "lorenum/utils",
   "description": "Mixed bag of utility classes",
   "license": "MIT",
   "authors": [
